# dev-flow

./: AGENTS.md  CHANGELOG.md  README.md  SUPPORT.md  pyproject.toml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: installation.md  local-development.md  quickstart.md  validate-and-clean-commands.md
scripts/bash/: create-prp.sh  run-cleanup.sh  run-validation.sh  update-agent-context.sh
scripts/powershell/: create-prp.ps1  run-cleanup.ps1  run-validation.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: agent-file-template.md  plan-template.md  prp-template.md  spec-template.md  tasks-template.md
templates/commands/: clean.md  implement.md  plan.md  prp.md  validate.md
